--- a/buildSrc/build.gradle
+++ b/buildSrc/build.gradle
@@ -37,3 +37,7 @@ allprojects {
 		maven { url 'https://plugins.gradle.org/m2' }
 	}
 }
+
+tasks.withType(JavaCompile) {
+	options.encoding = "UTF-8"
+}
