--- a/spring-sumkor/build.gradle
+++ b/spring-sumkor/build.gradle
@@ -15,3 +15,7 @@ dependencies {
     compile(project(":spring-core"))
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
+
+tasks.withType(JavaCompile) {
+    options.encoding = "UTF-8"
+}
