--- a/spring-sumkor/build.gradle
+++ b/spring-sumkor/build.gradle
@@ -13,7 +13,17 @@ dependencies {
     compile(project(":spring-context"))
     compile(project(":spring-beans"))
     compile(project(":spring-core"))
-    testCompile group: 'junit', name: 'junit', version: '4.12'
+//    optional("org.junit.jupiter:junit-jupiter-api")
+//    optional("javax.annotation:javax.annotation-api")
+//    testCompile group: 'junit', name: 'junit', version: '4.12'
+    testCompile(testFixtures(project(":spring-core")))
+    testCompile("javax.annotation:javax.annotation-api")
+    testFixturesApi("org.junit.jupiter:junit-jupiter-api")
+    testFixturesImplementation("org.assertj:assertj-core")
+}
+
+test {
+    useJUnitPlatform()
 }
 
 tasks.withType(JavaCompile) {
