--- a/spring-sumkor/build.gradle
+++ b/spring-sumkor/build.gradle
@@ -27,6 +27,11 @@ dependencies {
 //    optional("javax.servlet:javax.servlet-api:3.1.0")
 //    optional("javax.servlet.jsp:javax.servlet.jsp-api")
 
+    // JSON
+    optional("com.fasterxml.jackson.core:jackson-databind")
+    compile 'com.alibaba:fastjson:1.2.35'
+
+
     testCompile(testFixtures(project(":spring-core")))
     testCompile("javax.annotation:javax.annotation-api")
     testCompile("org.aspectj:aspectjweaver")
